# Crypto-Whale

./: .gitignore  README.md  index.html  vercel.json
backend/: .env  Cargo.toml
backend/firebase-admin/: .env  index.js  package-lock.json  package.json  serviceAccountKey.json  solana-service.js
backend/solana-integration/: Cargo.toml  bindings.js  js-wrapper-compat.js  js-wrapper.mjs  package-lock.json  package.json  test.js
backend/solana-integration/src/: lib.rs
frontend/: .env.example  .gitignore  README.md  firebase.json  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AlpacaConnect.tsx  CoinChart.tsx  ColorPicker.tsx  DashboardView.tsx  Header.tsx  ModularColorPicker.tsx  PlaidConnect.tsx  SettingsModal.tsx  SolanaWalletManager.tsx  ThemeToggle.tsx  TradeAllocator.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeProvider.tsx  WalletContext.tsx  WalletProviders.tsx
frontend/src/hooks/: useTheme.ts  useWebSocket.ts
frontend/src/lib/: colors.ts  firebase.ts  firebaseInit.ts  mockAuth.ts  modularColors.ts  queryClient.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  MarketData.tsx  PortfolioAnalysis.tsx  Register.tsx  TransactionLog.tsx  TransactionLogSimple.tsx  WalletConnection.tsx
frontend/src/services/: apiService.ts  coinGeckoService.ts  portfolioService.ts  solanaService.ts
frontend/src/types/: index.ts
frontend/whale-watch-solana-feed/: tailwind.config.ts  vite.config.ts
frontend/whale-watch-solana-feed/public/: _redirects
(+14 files in other folders)
