[package]
name = "sol_whale_tracker_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3" # For REST API
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] } # For database
dotenv = "0.15" # For environment variables
solana-client = "2.0" # Solana RPC client
tokio-tungstenite = "0.17" # WebSocket support
uuid = { version = "1", features = ["v4"] } # For unique IDs